--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -36,8 +36,8 @@
                                 type="text"
                                 :mapInheritance="props"
                                 :error="productEanError"
-                                :label="$tc('sw-product.settingsForm.labelEan')"
-                                :placeholder="$tc('sw-product.settingsForm.placeholderEan')"
+                                :label="$tc('sw-product.settingsForm.labelGtin')"
+                                :placeholder="$tc('sw-product.settingsForm.placeholderGtin')"
                                 :disabled="props.isInherited || !allowEdit"
                                 :value="props.currentValue"
                                 @change="props.updateCurrentValue">
